# rag-inference-pipeline

./: .dockerignore  .env.local  .env.prod  .env.shared  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  create_test_docs.py  install.sh  pyproject.toml  requirements.txt  run.sh  start_pipeline.sh
.github/: dependabot.yml
.github/workflows/: prek.yml  pytest.yml
analysis/: consolidated_results.csv
configs/: baseline_gateway.yaml  gateway_docfetch_rerank_postproc.yaml  gateway_embedder_docfetch_postproc.yaml  gateway_fat.yaml  gateway_postproc.yaml  gateway_with_embedding.yaml  generation.yaml  generation_fetch_rerank.yaml  generation_fetch_rerank_full.yaml  generation_llm_only.yaml  generation_no_rerank.yaml  retrieval.yaml  retrieval_embedder_faiss_ids.yaml  retrieval_faiss_only.yaml  retrieval_only.yaml  retrieval_postproc_hub.yaml  retrieval_postproc_no_embedding.yaml  retrieval_rerank_no_embedding.yaml  retriever_with_rerank.yaml
configs/experiments/: asymmetric_id_retrieval.yaml  baseline.yaml  batch_sweep_high_throughput.yaml  batch_sweep_low_latency.yaml  combined_optimization.yaml  concurrency_stress.yaml  edge_rerank_experiment.yaml  gateway_docfetch_rerank.yaml  gateway_docfetch_rerank_tuned.yaml  gateway_embedder.yaml  gateway_embedder_docfetch.yaml  gateway_embedder_optimized.yaml  gateway_embedder_postproc_hub.yaml  gateway_embedding.yaml  gateway_postproc_experiment.yaml  generation_high_batch.yaml  long_duration_reliability.yaml  max_throughput_test.yaml  node1_postproc_hub.yaml  node2_fetch_rerank.yaml  optimized_batch_4.yaml  rerank_upstream.yaml  retrieval_rerank.yaml  retrieval_rerank_balanced.yaml  retrieval_rerank_batch_2.yaml  stress_retrieval.yaml  throughput_extreme.yaml  throughput_extreme_optimized.yaml
monitoring/: docker-compose.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yaml  ml-pipeline-dashboard.json
monitoring/grafana/provisioning/datasources/: datasources.yaml
monitoring/loki/: config.yaml
monitoring/otel-collector/: config.yaml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yaml
monitoring/tempo/: tempo.yaml
report/: architecture.mmd  report.tex  report.typ
report/ucglinux_analysis/: consolidated_results.csv
scripts/: __init__.py  analyze_experiments.py  benchmark_parallelism.py  capture_metrics.py  client.py  create_test_docs.py  profile_pipeline.py  regenerate_tier2_plots.py  run_all_experiments.sh  run_experiment.py  setup_local_faiss.sh  start_monitoring.sh  sync_requirements.py
src/pipeline/: __init__.py  __main__.py  _bootstrap.py  base_schemas.py  component_factory.py  component_registry.py  config.py  dependencies.py  enums.py  middleware.py  runtime.py  runtime_factory.py
src/pipeline/components/: document_store.py  embedding.py  faiss_store.py  llm.py  reranker.py  schemas.py  sentiment.py  toxicity.py
src/pipeline/config/: __init__.py  profile_schema.py
src/pipeline/services/: __init__.py  gateway.py  gateway_app.py  generation.py  retrieval.py
src/pipeline/services/gateway/: __init__.py  api.py  batch_scheduler.py  metrics.py  orchestrator.py  rpc_client.py  schemas.py
src/pipeline/services/generation/: __init__.py  api.py  llm.py  metrics.py  reranker.py  schemas.py  sentiment.py  service.py  toxicity.py
src/pipeline/services/retrieval/: __init__.py  api.py  document_store.py  embedding.py  faiss_store.py  schemas.py  service.py
src/pipeline/telemetry/: __init__.py  metrics.py  profiling.py  tracing.py
src/pipeline/utils/: cache.py  executors.py
tests/: __init__.py  test_base_schemas.py  test_batch_scheduler.py  test_caching.py  test_client.py  test_component_factory.py  test_component_registry.py  test_components.py  test_config.py  test_create_test_docs.py  test_dependencies.py  test_enums.py  test_executors.py  test_gateway.py  test_generation_service.py  test_json_performance.py  test_middleware.py  test_profile_schema.py  test_retrieval_service.py  test_runtime_factory.py  test_schemas.py  test_sync_requirements.py  test_telemetry.py  test_tracing.py
tier2-test-data/analysis/: consolidated_results.csv
tier3-laptop-analysis/: consolidated_results.csv
