[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "cs5416-ml-pipeline"
version = "0.1.0"
description = "Distributed ML inference pipeline"
readme = "README.md"
requires-python = ">=3.10" # UGCLinux uses Python 3.10.12 as of Nov 7, 2025
authors = [
    { name = "Kadambari Mirashi", email = "km2266@cornell.edu" },
    { name = "Ian Holloway", email = "imh39@cornell.edu" },
    { name = "Sanjeev Ragunathan", email = "sr2432@cornell.edu" },
    { name = "Rachel Yan", email = "sy625@cornell.edu" },
]
dependencies = [
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "numpy>=2.2.6",
    "datasets>=4.4.1",
    "jinja2>=3.1.6",
    "faiss-cpu>=1.12.0",
    "requests>=2.32.5",
    "flask>=3.1.2",
    "sentence-transformers>=5.1.2",
]

[project.urls]
Repository = "https://github.com/IanHollow/cs5416-final-project/"

[dependency-groups]
dev = [
    "coverage[toml]>=7.11.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
    "types-requests>=2.32.4.20250913",
]


[tool.ruff]
required-version = ">=0.14.4"
target-version = "py310"
fix = true
line-length = 100
indent-width = 4
exclude = [
    # default
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    # project specific
    "resources",
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # Error
    "W",    # Warning
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "TC",   # flake8-type-checking
    "S",    # flake8-bandit
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "NPY",  # NumPy-specific rules
    "RUF",  # Ruff-specific rules
    "PERF", # Perflint
    "PIE",  # flake8-pie
]
ignore = [
    "E501", # line-too-long
]

[tool.pytest.ini_options]
minversion = "8.4.2"
addopts = "-ra --showlocals --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
norecursedirs = ["resources", ".git", ".tox", "dist", "build", ".eggs"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
exclude = '(build|dist|\.venv|venv|\.git|__pycache__|resources)'

[tool.coverage.run]
branch = true
source = ["src/pipeline"]
parallel = true

[tool.coverage.report]
fail_under = 80
skip_covered = true
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src/pipeline", "README.md", "pyproject.toml", "requirements.txt"]
