[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "cs5416-ml-pipeline"
version = "0.1.0"
description = "Distributed ML inference pipeline"
readme = "README.md"
requires-python = ">=3.10.12" # UGCLinux has Python 3.10.12 installed as default as of Nov 7, 2025
authors = [
  { name = "Kadambari Mirashi", email = "km2266@cornell.edu" },
  { name = "Ian Holloway", email = "imh39@cornell.edu" },
  { name = "Sanjeev Ragunathan", email = "sr2432@cornell.edu" },
  { name = "Rachel Yan", email = "sy625@cornell.edu" },
]
dependencies = [
  "torch>=2.9.1",
  "transformers>=4.57.1",
  "numpy>=2.2.6,<2.3.0",                           # numpy 2.3.0+ requires Python 3.11+
  "datasets>=4.4.1",
  "jinja2>=3.1.6",
  "faiss-cpu>=1.12.0",
  "sentence-transformers>=5.1.2",
  "fastapi>=0.121.2",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "httpx[http2]>=0.28.1",
  "msgspec>=0.19.0",
  "orjson>=3.11.4",
  "zstandard>=0.25.0",
  "lz4>=4.4.5",
  "prometheus-client>=0.23.1",
  "opentelemetry-instrumentation-fastapi>=0.59b0",
  "psutil>=7.1.3",
  "scalene>=1.5.55",
  "pyarrow>=22.0.0",
  "safetensors>=0.6.2",
  "diskcache>=5.6.3",
  "tenacity>=9.1.2",
  "requests>=2.32.5",
]

[project.urls]
Repository = "https://github.com/IanHollow/cs5416-ml-pipeline"

[dependency-groups]
dev = [
  "coverage[toml]>=7.11.1",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-emoji>=0.2.0",
  "pytest-md>=0.2.0",
  "ruff>=0.14.4",
  "tomli>=2.3.0",
  "types-requests>=2.32.4.20250913",
]


[tool.ruff]
required-version = ">=0.14.0"
target-version = "py310"
fix = true
line-length = 100
indent-width = 4
exclude = [
  # default
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  # project specific
  "resources",
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",     # Error
  "W",     # Warning
  "F",     # Pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "SIM",   # flake8-simplify
  "PTH",   # flake8-use-pathlib
  "TC",    # flake8-type-checking
  "S",     # flake8-bandit
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "NPY",   # NumPy-specific rules
  "RUF",   # Ruff-specific rules
  "PERF",  # Perflint
  "PIE",   # flake8-pie
  "FAST",  # FastAPI
  "ASYNC", # flake8-async
  "ANN",   # flake8-annotations
  "T20",   # flake8-print
]
ignore = [
  "E501", # line-too-long
]

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = ["S101"]
"src/pipeline/__init__.py" = ["F401"]
"scripts/*" = ["T201", "T203"]

# [tool.ruff.lint.mccabe]
# max-complexity = 12

[tool.pytest.ini_options]
minversion = "8.4.2"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
  "--cov",
  "--cov-report=xml",
  "--cov-report=term-missing",
  "--junitxml=junit.xml",
  "-v",
]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = ["resources", ".git", ".tox", "dist", "build", ".eggs"]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = false
exclude = '(build|dist|\.venv|venv|\.git|__pycache__|resources)'

[[tool.mypy.overrides]]
module = ["faiss", "faiss.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/pipeline", "scripts"]
parallel = true

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src/pipeline", "README.md", "pyproject.toml", "requirements.txt"]

[tool.yamlfix]
whitelines = 1
line_length = 80
section_whitelines = 1
quote_representation = '"'
preserve_quotes = true
